<resources>
    <string name="app_name">AppFindYourDreamHouse</string>
    <string name="findYourDreamHouse">Find Your \nDream House</string>
    <string name="search">Search</string>
    <string name="recent">Recent</string>
    <string name="viewAll">View All</string>
    <string name="bestFromYou">Best from you</string>
    <string name="titleHouse">ABC</string>
    <string name="price">$3,999</string>
    <string name="textbtnSeeDetails">See Details</string>
    <string name="textTitleHouse">Dreamsville House</string>
    <string name="textStretName">jl. Sultan Iskandar Mude</string>
    <string name="textMonthlyRent">Monthly Rent</string>
    <string name="textDescribe">Welcome To Your New Home! This Modern And \nSpacious 2-Bedroom Apartment Is Located In The Heart \nOf San Francisco, Offering Convenience, Comfort, And \nStyle</string>
    <string name="textButonContentIsLocked">Content is locked</string>
    <string name="textButtonUnlockContact">Unlock Contact</string>
</resources>