<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#BAB4CC"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".DetailsPostHouse">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutImgVHouse"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_details"
        >
        <ImageButton
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_24"
            android:background="@drawable/custon_btn_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:elevation="10dp"/>


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgvHouse"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/img_house1"
            app:shapeAppearanceOverlay="@style/Coner"
            app:layout_constraintTop_toBottomOf="@id/imgBack"
            android:scaleType="fitXY"
            android:paddingTop="5dp"
            android:paddingHorizontal="20dp"/>

        <View
            android:id="@+id/vDetails"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/background_view_details"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgvHouse"
            app:layout_constraintVertical_bias="0.0" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgvHouse"
            android:layout_marginTop="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="30dp"
                >
                <TextView
                    android:id="@+id/tvTitleHouse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/textTitleHouse"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:textSize="30sp"/>
                <TextView
                    android:id="@+id/tvStreetName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tvTitleHouse"
                    app:layout_constraintStart_toStartOf="@id/tvTitleHouse"
                    android:text="@string/textStretName"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/tvDescribe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tvStreetName"
                    android:text="@string/textDescribe"
                    android:textColor="@color/lightGreen"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@id/tvStreetName"
                    android:layout_marginTop="20dp"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_ContentLocked"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tvDescribe"
                    android:background="@drawable/button_content_locked"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/peach"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:text="@string/textButonContentIsLocked"/>

                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="60dp"
                    android:text="@string/price"
                    android:textColor="@color/offWhite"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/tvTitleHouse"
                    app:layout_constraintTop_toBottomOf="@id/btn_ContentLocked" />

                <TextView
                    android:id="@+id/tvMonthlyRent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textMonthlyRent"
                    app:layout_constraintTop_toBottomOf="@id/tvPrice"
                    app:layout_constraintStart_toStartOf="@id/tvPrice"
                    android:textColor="@color/lightGreen"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnUnlockContact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="44dp"
                    android:background="@drawable/button_unlock_locked"
                    android:paddingHorizontal="30dp"
                    android:text="@string/textButtonUnlockContact"
                    android:textAllCaps="false"
                    android:textColor="@color/green"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>