<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="20dp"
    android:paddingTop="20dp"
    tools:context=".ListHouseActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/white"
        >

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgHouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:src="@drawable/img_house"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            app:shapeAppearanceOverlay="@style/Coner" />

        <TextView
            android:id="@+id/tvTitleHouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleHouse"
            android:layout_marginStart="20dp"
            android:textColor="#2F4E4E"
            android:textSize="15sp"
            android:layout_marginTop="220dp"/>
        <TextView
            android:id="@+id/tv_PriceHouseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="#055A4E"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginTop="250dp"/>

        <TextView
            android:id="@+id/tv_MonthlyRentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="270dp"
            android:text="Monthly Rent"
            android:textColor="#146559"
            android:textSize="12sp"
            android:layout_marginBottom="20dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_SeeDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textbtnSeeDetails"
            android:textSize="11sp"
            android:textColor="#12604B"
            android:textStyle="bold"
            android:layout_marginTop="240dp"
            android:layout_marginStart="210dp"
            android:background="@drawable/custon_btn_see_details"/>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>